--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -125,6 +125,24 @@
     <Compile Include="Forms\programChoose.Designer.cs">
       <DependentUpon>programChoose.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\prompts\clPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\prompts\clPrompt.Designer.cs">
+      <DependentUpon>clPrompt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\prompts\dspfPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\prompts\dspfPrompt.Designer.cs">
+      <DependentUpon>dspfPrompt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\prompts\listPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\prompts\listPrompt.Designer.cs">
+      <DependentUpon>listPrompt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\userSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +180,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\programChoose.resx">
       <DependentUpon>programChoose.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\prompts\clPrompt.resx">
+      <DependentUpon>clPrompt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\prompts\dspfPrompt.resx">
+      <DependentUpon>dspfPrompt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\prompts\listPrompt.resx">
+      <DependentUpon>listPrompt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\userSettings.resx">
       <DependentUpon>userSettings.cs</DependentUpon>
