--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="NppPluginNETBase.cs" />
     <Compile Include="NppPluginNETHelper.cs" />
+    <Compile Include="PackedNumeric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
