--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -150,6 +150,17 @@
       <DependentUpon>wrkBind.cs</DependentUpon>
     </Compile>
     <Compile Include="IBMi.cs" />
+    <Compile Include="IBMiCommandRender.cs" />
+    <Compile Include="IBMiNPPInstaller.cs" />
+    <Compile Include="IBMiUtilities.cs" />
+    <Compile Include="Forms\installRemote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\installRemote.Designer.cs" />
+    <Compile Include="Forms\libraryList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\libraryList.Designer.cs" />
     <Compile Include="listError.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="NppPluginNETBase.cs" />
@@ -160,6 +171,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RPGAutoCompleter.cs" />
+    <Compile Include="RPGParser.cs" />
     <Compile Include="RPGTools.cs" />
     <Compile Include="UnmanagedExports.cs" />
   </ItemGroup>
@@ -188,6 +201,8 @@
     <EmbeddedResource Include="Forms\wrkBind.resx">
       <DependentUpon>wrkBind.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\installRemote.resx" />
+    <EmbeddedResource Include="Forms\libraryList.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
