--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -39,7 +39,7 @@
     <ErrorReport>prompt</ErrorReport>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
