--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -149,18 +149,22 @@
     <Compile Include="Forms\wrkBind.Designer.cs">
       <DependentUpon>wrkBind.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\installRemote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\installRemote.Designer.cs">
+        <DependentUpon>installRemote.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\libraryList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\libraryList.Designer.cs">
+        <DependentUpon>libraryList.cs</DependentUpon>
+    </Compile>    
     <Compile Include="IBMi.cs" />
     <Compile Include="IBMiCommandRender.cs" />
     <Compile Include="IBMiNPPInstaller.cs" />
     <Compile Include="IBMiUtilities.cs" />
-    <Compile Include="Forms\installRemote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\installRemote.Designer.cs" />
-    <Compile Include="Forms\libraryList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\libraryList.Designer.cs" />
     <Compile Include="LanguageTools\listError.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="NppPluginNETBase.cs" />
@@ -201,8 +205,12 @@
     <EmbeddedResource Include="Forms\wrkBind.resx">
       <DependentUpon>wrkBind.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\installRemote.resx" />
-    <EmbeddedResource Include="Forms\libraryList.resx" />
+    <EmbeddedResource Include="Forms\installRemote.resx">
+        <DependentUpon>installRemote.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\libraryList.resx">
+        <DependentUpon>libraryList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
