--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -100,6 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DllExport\DllExportAttribute.cs" />
+    <Compile Include="Forms\openMember.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\openMember.Designer.cs">
+      <DependentUpon>openMember.cs</DependentUpon>
+    </Compile>
     <Compile Include="LanguageTools\CLCommandPrompter.cs" />
     <Compile Include="LanguageTools\CLParser.cs" />
     <Compile Include="LanguageTools\ErrorHandle.cs" />
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\errorListing.resx">
       <DependentUpon>errorListing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\openMember.resx">
+      <DependentUpon>openMember.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\programChoose.resx">
       <DependentUpon>programChoose.cs</DependentUpon>
