--- a/IBMiCmd.csproj
+++ b/IBMiCmd.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Forms\openMember.Designer.cs">
       <DependentUpon>openMember.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\uploadMember.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\uploadMember.Designer.cs">
+      <DependentUpon>uploadMember.cs</DependentUpon>
+    </Compile>
     <Compile Include="LanguageTools\CLCommandPrompter.cs" />
     <Compile Include="LanguageTools\CLParser.cs" />
     <Compile Include="LanguageTools\ErrorHandle.cs" />
@@ -210,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\rpgForm.resx">
       <DependentUpon>rpgForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\uploadMember.resx">
+      <DependentUpon>uploadMember.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\userSettings.resx">
       <DependentUpon>userSettings.cs</DependentUpon>
