--- a/DllExport/NppPlugin.DllExport.targets
+++ b/DllExport/NppPlugin.DllExport.targets
@@ -17,8 +17,8 @@
                    ProjectDirectory="$(MSBuildProjectDirectory)"
                    InputFileName="$(TargetPath)"
                    FrameworkPath="$(TargetedFrameworkDir);$(TargetFrameworkDirectory)"
-                   LibToolPath="C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.10.25017\bin\HostX86\x86"
-                   LibToolDllPath="C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.10.25017\bin\HostX86\x86"
+                   LibToolPath="D:\Visual Studio 2017\VC\Tools\MSVC\14.10.25017\bin\HostX86\x86"
+                   LibToolDllPath="D:\Visual Studio 2017\VC\Tools\MSVC\14.10.25017\bin\HostX86\x86"
                    SdkPath="$(SDK40ToolsPath)"/>
   </Target>
 </Project>
